Corrected badges wrapping over two lines

--- a/public/css/default/respondenthome.css
+++ b/public/css/default/respondenthome.css
@@ -1,5 +1,5 @@
 #badges {
-  margin-left: 250px;
+  margin-left: 220px;
 }
 
 #badges img {
